Add FPGA usage data

--- a/report/main.tex
+++ b/report/main.tex
@@ -532,6 +532,15 @@ The code for this block is given in \autoref{lst:sv_vcr_ir_code_decoder}.
 \subsubsection{\texttt{ir\_code\_decoder} Module}
 \filelisting[label=lst:sim_vcr_ir_code_decoder]{../do_files/vcr_remote/ir_code_decoder.do}
 
+\section{FPGA Usage Data}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=.6\textwidth]{images/fpga_usage.png}
+	\caption{FPGA usage data from compilation of project top-level.}
+	\label{fig:fpga_usage}
+\end{figure}
+
 \printbibliography
 
 \end{document}
