--- a/report/main.tex
+++ b/report/main.tex
@@ -110,7 +110,7 @@ The code for this block is given in \autoref{lst:sv_devices_mux}.
 
 \begin{figure}[H]
   \centering
-    \includegraphics[width=.85\textwidth]{images/block_diagrams/nes/nestoplevel1.jpg}
+    \includegraphics[width=.85\textwidth]{images/block_diagrams/nes/nestoplevel1.JPG}
 	\caption{Inputs: This takes in a 1-bit dataYellow input, 10MHz clock input, and a 1-bit reset signal. \newline
 	Outputs: This outputs a 1-bit clock, 1-bit latch, and a 8-bit bus that denotes the type of button being pressed \newline
 	Descriptions: The NES controller takes in a clock input and as the counter within is outputting a 4-bit count to the other modules, it determines the button that is being pressed on the NES. On the FPGA, it different types of buttons are represented by the various LED segments.
