adding section for PS2

--- a/report/main.tex
+++ b/report/main.tex
@@ -215,7 +215,14 @@ Description: As the reset signal is a logic HIGH (1) and there is a clock input 
 	\label{fig:PS2_decoder}
 \end{figure}
 
-\subsubsection{Individual Block}
+\subsubsection{Simulation of top level}
+
+\begin{figure}[H]
+  \centering
+    \includegraphics[width=0.6\textwidth]{images/ModelSim/PS2/PS2_Controller.png}
+	\caption{Above is the ModelSim simulation of the top level PS2 driver for the FPGA. In this diagram, the clock represents the 50MHz clock on the FPGA}
+	\label{fig:PS2_topsim}
+\end{figure}
 \subsubsection{Next Individual Block}
 \subsubsection{Next Individual Block}
 \subsubsection{Next Individual Block}
